<resources>
    <string name="app_name">TDAH - organizador y rutinas</string>
    <string name="AD_App_ID" translatable="false">ca-app-pub-1329542702858699~9661424176</string>
    <string name="AD_Banner_ID" translatable="false">ca-app-pub-1329542702858699/1745560079</string>
    <string name="AD_Interstitial_ID" translatable="false">ca-app-pub-1329542702858699/7681209193</string>
    <string name="privacy">By continuing you agree <u>Terms of Services</u> &amp; <u>Privacy Policy</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="routines">1. Write down goals\n2. Write down goals\n3. Write down goals\n…</string>
    <string name="pro_desc">🔓 <b>Ad-Free Forever</b>: Bid farewell to ads for good. \n\n⚡ <b>Priority Support</b>: Get top-notch assistance whenever you need it. </string>
    <string name="create_your_routine_from_a_template_or_start_with_a_custom_one">Create your routine from a template or start with a custom one</string>
    <string name="custom_routine">Custom Routine</string>
    <string name="suggested_routines">Suggested routines</string>
    <string name="start_the_day_energized">Start the day energized</string>
    <string name="morning_routine">Morning Routine</string>
    <string name="evening_routine">Evening Routine</string>
    <string name="get_better_sleep">Get better sleep</string>
    <string name="study_routine">Study Routine</string>
    <string name="better_focus_while_studying">Better focus while studying</string>
    <string name="selfcare_routine">Selfcare Routine</string>
    <string name="improve_your_mental_health">Improve your mental health</string>
    <string name="ready_for_work_routine">Ready for work Routine</string>
    <string name="get_more_done_with_a_ritual">Get more done with a ritual</string>
    <string name="name">Name</string>
    <string name="custom_step">Custom Step</string>
    <string name="time">Time</string>
    <string name="or">or</string>
    <string name="no_explicit_time">No explicit time</string>
    <string name="save_step">Save Step</string>
    <string name="amazing_job">Amazing Job!</string>
    <string name="you_have_completed_your_today_s_routine">You have completed your Today\'s routine</string>
    <string name="number_of_steps_you_completed">Number of Steps you completed</string>
    <string name="total_time">Total Time</string>
    <string name="done">Done</string>
    <string name="routine_name">Routine Name</string>
    <string name="add_context">Add context</string>
    <string name="pick_from_library_or_create_a_custom">Pick from library or create a custom</string>
    <string name="wake_up_in_the_morning">Wake up in the morning</string>
    <string name="days">Days</string>
    <string name="reminder_timer">Reminder Timer</string>
    <string name="add_time">Add time</string>
    <string name="create_new_steps">Create new steps</string>
    <string name="pick_from_library_of_steps_or_create_a_custom_step">Pick from library of steps or create a custom step</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="enter_your_email_to_get_the_link_to_recover_password">Enter your email to get the link to recover password</string>
    <string name="e_mail">E-mail</string>
    <string name="next">Next</string>
    <string name="choose_you_language">Choose You Language</string>
    <string name="pick_one">Pick One</string>
    <string name="password">Password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="don_t_have_account_let_s_create">Don\'t have account? Let\'s Create</string>
    <string name="cancel_anytime">Cancel Anytime</string>
    <string name="ready_to_seize_the_opportunity_tap_upgrade_now_and_embark_on_a_limitless_journey_with_us">Ready to seize the opportunity? Tap \'Upgrade Now\' and embark on a limitless journey with us.</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="unleash_the_full_experience">Unleash the Full Experience</string>
    <string name="ad_free_and_premium_features_await">Ad-Free and Premium Features Await!</string>
    <string name="pros_of_becoming_a_member">Pros of becoming a member</string>
    <string name="supercharge_your_experience_with_our">Supercharge Your Experience with Our</string>
    <string name="monthly_subscription">Monthly Subscription</string>
    <string name="elevate_your_experience_with_a">Elevate Your Experience with a</string>
    <string name="lifetime_subscription">Yearly Subscription</string>
    <string name="edit_t">Edit\t</string>
    <string name="if_you_start_now">If you start now</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="share_routine_t">Share Routine\t</string>
    <string name="start">Start</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="stop_procrastinating">Stop Procrastinating</string>
    <string name="manage_adhd_related_routine">Manage ADHD related routine</string>
    <string name="have_a_better_morning_routine">Have a better morning routine</string>
    <string name="focus_on_my_tasks_better">Focus on my tasks better</string>
    <string name="build_better_habits">Build better habits</string>
    <string name="something_else_other">Something Else / Other</string>
    <string name="app_setting">App Setting</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="color_palette">Color Palette</string>
    <string name="change_language">Change Language</string>
    <string name="default_language">Default Language</string>
    <string name="routines_setting">Routines Setting</string>
    <string name="show_24h_time">Show 24h time</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="go_pro">Go Pro</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_example_gmail_com">Email : contacto@ikervitoria.com</string>
    <string name="your_1_sentence_is_something_to_us">Your 1 sentence is something to us</string>
    <string name="follow_us_example">Follow us @ikervitoriapsicologo</string>
    <string name="your_1_follow_help_us_to_motivate">Your 1 follow help us to motivate</string>
    <string name="faqs">FAQs</string>
    <string name="how_to_duplicate_a_routine">How to duplicate a routine?</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_account_sign_in">Already have account? Sign In</string>
    <string name="now">Now</string>
    <string name="next_step">Next Step</string>
    <string name="info">Info.</string>
    <string name="routine_finished_approximately_at">Routine finished approximately at:</string>
    <string name="remaining_steps">Remaining steps:</string>
    <string name="reset_timer">Reset</string>
    <string name="skip">Skip</string>
    <string name="improve_your_routine">Improve your Routine</string>
    <string name="change_your_life_by_slowly_adding_new_healthy_habits_and_sticking_to_them">Change your life by slowly adding new healthy habits and sticking to them.</string>
    <string name="continue_with_e_mail">Continue with E-mail</string>
    <string name="please_wait">Please Wait…</string>
    <string name="edit_last_7_days">Edit last 7 days</string>
    <string name="if_you_forgot_to_mark_your_routine_as_completed_you_can_change_it_here">If you forgot to mark your routine as completed, you can change it here.</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="going_pretty_good">Going Pretty Good!</string>
    <string name="sunday_routines">Sunday Routines</string>
    <string name="monday_routines">Monday Routines</string>
    <string name="tuesday_routines">Tuesday Routines</string>
    <string name="wednesday_routines">Wednesday Routines</string>
    <string name="thursday_routines">Thursday Routines</string>
    <string name="friday_routines">Friday Routines</string>
    <string name="saturday_routines">Saturday Routines</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="today_routines">Today Routines</string>
    <string name="routines_followed">Routines Completed</string>
    <string name="add_routine">Add Routine</string>
    <string name="add_custom_sep">Add Custom Sep</string>
    <string name="no_reminder">No reminder</string>
    <string name="add">Add</string>
    <string name="select_time">Select Time</string>
    <string name="edit_routine">Edit Routine</string>
    <string name="delete_routine">Delete Routine</string>
    <string name="do_you_really_want_to_delete_this_routine">Do you really want to delete this routine??</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_add_name_for_the_routine">Please add name for the routine</string>
    <string name="please_add_at_least_one_day">Please add at least one day</string>
    <string name="please_add_at_least_one_step">Please add at least one step</string>
    <string name="routine_created">Routine Created</string>
    <string name="routine_updated">Routine Updated</string>
    <string name="routine_deleted">Routine Deleted</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="a_password_reset_link_is_sent_to_your_email">A Password Reset link is sent to your email</string>
    <string name="email_is_empty">Email is Empty!</string>
    <string name="email_is_not_valid">Email is not valid!</string>
    <string name="languages">Languages</string>
    <string name="password_is_empty">Password is Empty!</string>
    <string name="become_a_pro_member">Become a Pro member</string>
    <string name="_1_99_month">1.99€ / month</string>
    <string name="_9_99_month">9.99€ / month</string>
    <string name="start_routine">Start Routine</string>
    <string name="steps">" steps"</string>
    <string name="step">" step"</string>
    <string name="you_already_finish_all_task">You already finished all the task</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="do_you_really_want_to_logout">Do you really want to logout?</string>
    <string name="do_you_really_want_to_delete">Do you really want to Delete All your data?</string>
    <string name="select_which_describes_you">Select Which Describes You</string>
    <string name="create_account">Create Account</string>
    <string name="_1_swipe_the_routine_card_to_the_side_n2_tap_on_duplicate_routine_n3_confirm">1. Swipe the routine card to the side\n2. Tap on \'duplicate routine\'\n3. Confirm</string>
    <string name="i_m_having_problems_wih_the_notifications">I\'m having problems with the notifications</string>
    <string name="how_to_edit_a_routine">How to edit a routine?</string>
    <string name="_1_tap_on_the_routine_n2_tap_on_the_edit_button_n3_edit_your_routine_n4_save_changes">1. Tap on the routine\n2. Tap on the Edit Button\n3. Edit your routine\n4. Save changes</string>
    <string name="can_i_reorder_tasks_while_doing_a_routine">Can I reorder tasks while doing a routine?</string>
    <string name="not_yet_but_you_can_use_the_push_task_to_the_end_button_to_go_to_the_next_task_and_do_the_current_task_later">Not yet, but you can use the \'Push task to the end\' button to go to the next task and do the current task later.</string>
</resources>