<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.LanguageActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/next"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/airbnb"
            android:includeFontPadding="false"
            android:padding="12sp"
            android:text="@string/choose_you_language"
            android:textColor="@color/dark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pickOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/airbnb"
            android:includeFontPadding="false"
            android:padding="12sp"
            android:text="@string/pick_one"
            android:textAllCaps="true"
            android:textColor="@color/light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <xyz.teamgravity.imageradiobutton.GravityRadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <xyz.teamgravity.imageradiobutton.GravityImageRadioButton
                android:id="@+id/english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:background="@drawable/radio_btn_uncheck"
                android:padding="20dp"
                app:girbImage="@drawable/united_kingdom"
                app:girbPressedBackgroundDrawable="@drawable/radio_btn_checked"
                app:girbPressedTextColor="@color/white"
                app:girbText="@string/english"
                app:girbUnpressedTextColor="@color/dark" />

            <xyz.teamgravity.imageradiobutton.GravityImageRadioButton
                android:id="@+id/spanish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:background="@drawable/radio_btn_uncheck"
                android:padding="20dp"
                app:girbImage="@drawable/spain"
                app:girbPressedBackgroundDrawable="@drawable/radio_btn_checked"
                app:girbPressedTextColor="@color/white"
                app:girbText="@string/spanish"
                app:girbUnpressedTextColor="@color/dark" />

        </xyz.teamgravity.imageradiobutton.GravityRadioGroup>

    </LinearLayout>


    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/airbnb"
        android:padding="15sp"
        android:textSize="16sp"
        android:textColor="@color/text_white"
        android:layout_above="@id/adView"
        android:text="@string/next" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/AD_Banner_ID">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>