<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:hint="@string/e_mail"
        app:errorIconDrawable="@drawable/error"
        app:boxBackgroundColor="@color/background"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/airbnb"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        app:passwordToggleTint="@color/transparent"
        app:passwordToggleTintMode="screen"
        app:passwordToggleDrawable="@drawable/password_toggle"
        app:errorIconDrawable="@drawable/error"
        app:boxBackgroundColor="@color/background"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/airbnb"
            android:password="true"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgot"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginHorizontal="15dp"
        android:fontFamily="@font/airbnb"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:text="@string/i_forgot_my_password" />


    <Button
        android:id="@+id/create"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/login"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="15dp"
        android:fontFamily="@font/airbnb"
        android:text="@string/don_t_have_account_let_s_create"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/airbnb"
        android:padding="15sp"
        android:textSize="16sp"
        android:textColor="@color/text_white"
        android:layout_alignParentBottom="true"
        android:text="@string/next" />

</RelativeLayout>